tags/release-1.0.3/docsrc/gallery.rst
=======
Gallery
=======

Below are examples of apps built with Heron (in no particular order). If you have a Heron app running publicly or internally
you would help the project greatly if you send a screenshot, a URL (if possible) and some words on
the type of app and Heron features used.

Also, if you know of a publicly accessible Heron app let us know.

In all cases send email to: `info@heron-mc.org <mailto://info@heron-mc.org>`__ for displaying your heron app.

|
|

.. class:: Prototype Viewer for Dutch Kadaster

.. image:: _static/screenshots/kadviewer.kademo.nl.jpg
   :class: gallery-img
   :alt: kadviewer.kademo.nl
   :align: left
   :target: http://kadviewer.kademo.nl

* Flagship Heron app
* url: http://kadviewer.kademo.nl
* organisation: Dutch Kadaster
* author: Just van den Broecke
* features: WFS search, Redlining, Catalog, basically all Heron features!

.. class:: MDI-NI  - Marine Infrastructure of Lower Saxony, Germany

.. image:: _static/screenshots/mdi.niedersachsen.de.png
   :class: gallery-img
   :alt: www.mdi.niedersachsen.de
   :align: left
   :target: http://www.mdi.niedersachsen.de/Portal

* Visualize and query datasets, metadata, INSPIRE AtomFeeds (external)
* url: http://www.mdi.niedersachsen.de/Portal
* organization: NLPV, NLWKN, MDI-DE
* author: Michael Räder
* features: WFS queries (GXP), downloads, address search, coordinate search, OL Editor, metadata, ...

One of the nicest and most complete Heron apps!


.. class:: GPlus (Czech Republic)

.. image:: _static/screenshots/www.gplus.cz.png
   :class: gallery-img
   :alt: www.gplus.cz
   :align: left
   :target: http://1drv.ms/1zagib7

* base library of G-Obec (eng: G-Municipality) app for over 50 municipalities in CZ
* url: http://1drv.ms/1zagib7 (screenshots)
* organisation: GPlus (http://www.gplus.cz/)
* author: Martin Kokeš
* features: many, including: complex condition survey and mapping module for generic vector layers like traffic signs, urban accessories, power lines, water pipes etc. including Google Streetview helper for quick mapping

Click image to see more screenshots.


.. class:: ÉMO Építésügyi Modul (Eng: Interactive Cadastral Management System) - Hungary

.. image:: _static/screenshots/gergely.hu.png
   :class: gallery-img
   :alt: gergely.hu
   :align: left
   :target: _static/screenshots/gergely.hu-full.png

* Application name: ÉMO Építésügyi Modul ( ~ interactive cadastre managing system).
* Organization: Lechner Lajos Non Profitable Ltd.
* Author: Gergely Padányi-Gulyás
* Features: WFS queries, feature info, printing, measuring, OLEditor, layers, legend, downloading excel etc etc.

Click image to see full image.

.. class:: Croatian Forests Ltd. Geoportal Viewer

.. image:: _static/screenshots/davor-racic.jpg
   :class: gallery-img
   :alt: davor-racic.jpg
   :align: left
   :target: _static/screenshots/davor-racic-full.jpg

* Visualizes layers from Croatian Forests OGC services (PostGIS+GeoServer)
* url: (internal app)
* organisation: Croatian Forests Ltd.
* author: Croatian Forests Ltd. IT department
* features: WFS search (downloads in KML,DXF,SHP), coordinate search, OL editor, printing

Click image to see full image.


.. class:: Air Quality Data Viewer (Geonovum/RIVM)

.. image:: _static/screenshots/sensors.geonovum.nl.jpg
   :class: gallery-img
   :alt: sensors.geonovum.nl
   :align: left
   :target: http://sensors.geonovum.nl/heronviewer

* Viewing chemical components with timeseries values
* url: http://sensors.geonovum.nl/heronviewer
* organisation: Geonovum
* author: Just van den Broecke
* features: WMS-Time, TimeRangeSlider, WFS search



.. class:: Dutch Earthquakes

.. image:: _static/screenshots/gasbevingen-portaal.jpg
   :class: gallery-img
   :alt: gasbevingen-portaal
   :align: left
   :target: http://opengis.eu/gasbevingen

* Visualizes Earthquakes caused by gasmining
* url: http://opengis.eu/gasbevingen
* organisation: Gasbevingen.eu
* author: Wim Blanken
* features: TimeSlider

.. class:: PDOK Viewer

.. image:: _static/screenshots/pdokviewer.pdok.nl.jpg
   :class: gallery-img
   :alt: pdokviewer.pdok.nl
   :align: left
   :target: http://pdokviewer.pdok.nl

* Visualizes Layers from Dutch National SDI (PDOK)
* url: http://pdokviewer.pdok.nl
* organisation: http://pdok.nl, maintenance by Kadaster
* author: PDOK
* features: Heron Map Context

.. class:: RVOB Viewer

.. image:: _static/screenshots/www.rvob.nl.jpg
   :class: gallery-img
   :alt: www.rvob.nl
   :align: left
   :target: http://www.rvob.nl

* Rijksvastgoed- en ontwikkelingsbedrijf (RVOB) Viewer
* organisation: http://www.rvob.nl
* author: RVOB
* features: WFS Searches

.. class:: TransBASE San Francisco - transportation safety database

.. image:: _static/screenshots/transbasesf.org.jpg
   :class: gallery-img
   :alt: www.transbasesf.org
   :align: left
   :target: _static/screenshots/transbasesf.org.png

* Visualize and query datasets from SFDPH's transportation safety database (TransBASE).
* url: http://www.transbasesf.org (password protected)
* organization: San Francisco Department of Public Health - Program on Health Equity and Sustainability (http://www.sfhealthequity.org/)
* author: Devan Morris
* features: WFS queries, downloads (SHP, CSV, JSON), address search, and printing

Click image to see full image.

.. class:: Kademo Lab Viewer

.. image:: _static/screenshots/www.kademo.nl.jpg
   :class: gallery-img
   :alt: www.kademo.nl
   :align: left
   :target: http://www.kademo.nl

* Kademo Lab Viewer - testbed
* url: http://kademo.nl
* organisation: Dutch Kadaster
* author: Just van den Broecke for Kadaster
* features: WFS search, Redlining, basically most Heron features!

